Fix columns content overflow.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,7 +67,7 @@ div#contact div input, textarea, select {
 width: 80%;
 }
 .column-two{
-  width: 20%;
+  width: auto;
   margin-left: 1em;
   min-height: 1OOOpx;
 }
@@ -128,6 +128,7 @@ width: 80%;
       display: block;
     }
     .column-one{
+    width: 100%;
     }
     .column-two{
     width: 100%;
